fixes for BED